--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,14 +1,9 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - joyitaf
 
 repo_description_lines_max: 2
 
 github_repos:
-  - alshedivat/al-folio
-  - jekyll/jekyll
-  - twbs/bootstrap
-  - jquery/jquery
-  - FortAwesome/Font-Awesome
-  - mathjax/MathJax
-  - jpswalsh/academicons
+  - JoyitaF/Cloud-Hemo-Sphere-CSE472-Project
+  - ishraqfatin/taka-tracker
+  - JoyitaF/IUBComp-CSE309-Final-WebApplication
